Fixed wrong background for checkboxes and radios in IE7 part of bug # 769
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/phpsurveyor@2697 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -92,6 +92,12 @@ td {
 	color: #999;
 	font-size: 11px;
 }
+.checkboxbtn {
+	background-color: #BBBBBB;
+}
+.radiobtn {
+	background-color: #BBBBBB;
+}
 input, select {
 	color: #000080;
 	background: #EEEFFF;
